Add missing ref

--- a/refs.bib
+++ b/refs.bib
@@ -833,3 +833,18 @@ url = {http://jcc.sagepub.com/cgi/doi/10.1177/0022022104273656},
 volume = {36},
 year = {2005}
 }
+
+@article{Elfenbein2015,
+author = {Elfenbein, Hillary Anger and Barsade, Sigal G},
+file = {:home/whn/data/Mendeley Desktop/Available at SSRN/Elfenbein, Barsade\_2014\_The Social Perception of Emotional Abilities Expanding What We Know About Observer Ratings of Emotional Intellig.pdf:pdf},
+journal = {Available at SSRN},
+keywords = {ability tests,emotional intelligence,observer ratings,self-ratings,social,social perception},
+mendeley-groups = {mag\_dsv},
+number = {1},
+pages = {17--34},
+title = {{The Social Perception of Emotional Abilities: Expanding What We Know About Observer Ratings of Emotional Intelligence}},
+url = {http://papers.ssrn.com/sol3/Papers.cfm?abstract\_id=2482284},
+volume = {15},
+year = {2014}
+}
+
