add missing ref

--- a/refs.bib
+++ b/refs.bib
@@ -847,4 +847,22 @@ url = {http://papers.ssrn.com/sol3/Papers.cfm?abstract\_id=2482284},
 volume = {15},
 year = {2014}
 }
+@article{Tottenham2009,
+abstract = {A set of face stimuli called the NimStim Set of Facial Expressions is described. The goal in creating this set was to provide facial expressions that untrained individuals, characteristic of research participants, would recognize. This set is large in number, multiracial, and available to the scientific community online. The results of psychometric evaluations of these stimuli are presented. The results lend empirical support for the validity and reliability of this set of facial expressions as determined by accurate identification of expressions and high intra-participant agreement across two testing sessions, respectively.},
+author = {Tottenham, Nim and Tanaka, James W and Leon, Andrew C and McCarry, Thomas and Nurse, Marcella and Hare, Todd A and Marcus, David J and Westerlund, Alissa and Casey, B J and Nelson, Charles},
+doi = {10.1016/j.psychres.2008.05.006},
+file = {:home/whn/data/Mendeley Desktop/Psychiatry research/Tottenham et al.\_2009\_The NimStim set of facial expressions judgments from untrained research participants.pdf:pdf},
+issn = {0165-1781},
+journal = {Psychiatry research},
+keywords = {Adolescent,Adult,Cross-Cultural Comparison,Emotions,Emotions: physiology,Facial Expression,Humans,Judgment,Judgment: physiology,Neuropsychological Tests,Pattern Recognition, Visual,Pattern Recognition, Visual: physiology,Photic Stimulation,Psychometrics,Reaction Time,Reproducibility of Results,Young Adult},
+mendeley-groups = {mag\_dsv/dbs},
+month = aug,
+number = {3},
+pages = {242--9},
+pmid = {19564050},
+title = {{The NimStim set of facial expressions: judgments from untrained research participants.}},
+url = {http://www.sciencedirect.com/science/article/pii/S0165178108001480},
+volume = {168},
+year = {2009}
+}
 
