--- a/summaryearlier.tex
+++ b/summaryearlier.tex
@@ -3,9 +3,13 @@
   \caption{Quantitative data sources}
   \label{listofstudies}
   \begin{tabularx}{\textwidth}{lllll}
-    & \textbf{Subjects} & \textbf{Stimulus-set} & \textbf{$N_{subjects}$} & \textbf{Exposure (\si{\milli\second})} \\
+    \textbf{Study} & \textbf{Subjects} & \textbf{Stimulus-set} & \textbf{$N_{subjects}$} & \textbf{Exposure (\si{\milli\second})} \\
     \toprule
     1 & University students & RaFD & 50 & 200 \\
-    2 & Psychotherapists vs. University students & RaFD? & 72 & 200
+    \midrule
+    \multirow{3}{*}{2}
+    & Last-year psychotherapy students & RaFD   & 16 & 200 \\ 
+    & Last-year psychotherapy students & JACFEE & 59 & 200 \\   
+    & \nth{1} year psychology students & RaFD   & 24 & 200
   \end{tabularx}
 \end{table}
