--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,7 @@
 \usepackage[american]{babel}
 \usepackage[parfill]{parskip}
 \usepackage{siunitx}
+\usepackage{nth}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{refs.bib}
 
