--- a/refs.bib
+++ b/refs.bib
@@ -866,3 +866,22 @@ volume = {168},
 year = {2009}
 }
 
+@article{Banziger2012,
+abstract = {Research on the perception of emotional expressions in faces and voices is exploding in psychology, the neurosciences, and affective computing. This article provides an overview of some of the major emotion expression (EE) corpora currently available for empirical research and introduces a new, dynamic, multimodal corpus of emotion expressions, the Geneva Multimodal Emotion Portrayals Core Set (GEMEP-CS). The design features of the corpus are outlined and justified, and detailed validation data for the core set selection are presented and discussed. Finally, an associated database with microcoded facial, vocal, and body action elements, as well as observer ratings, is introduced.},
+author = {B\"{a}nziger, Tanja and Mortillaro, Marcello and Scherer, Klaus R},
+doi = {10.1037/a0025827},
+file = {:home/whn/data/Mendeley Desktop/Emotion (Washington, D.C.)/B\"{a}nziger, Mortillaro, Scherer\_2012\_Introducing the Geneva Multimodal expression corpus for experimental research on emotion perception.pdf:pdf},
+issn = {1931-1516},
+journal = {Emotion (Washington, D.C.)},
+keywords = {10,1037,a0025827,doi,dx,emotion expression,emotion perception,experimental research is the,expression corpora,face,http,multimodal communication,org,stimulus validation,supp,supplemental materials,systematic,the hallmark of all,voice},
+mendeley-groups = {mag\_dsv},
+month = oct,
+number = {5},
+pages = {1161--79},
+pmid = {22081890},
+title = {{Introducing the Geneva Multimodal expression corpus for experimental research on emotion perception.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/22081890},
+volume = {12},
+year = {2012}
+}
+
