--- a/stimsets.tex
+++ b/stimsets.tex
@@ -4,10 +4,11 @@
   \begin{tabularx}{\textwidth}{lllll}
     \textbf{Name} & \textbf{$N_{models}$} & \textbf{Expressions} & \textbf{Angles} & \textbf{Ethnicities} \\
     \toprule
-    JACFEE & 8  & 8 & 1 & Japanese \& European \\
-    KDEF   & 70 & 8 & 5 & European             \\
-    MSFDE  & 4  & 6 & 1 & French Canadian, Chinese sub-Saharan African \\
-    RaFD   & 49 & 8 & 5 & European \& Moroccan \\
-    NimStim & 43 & 9 & 1 & African-, Asian- European- \& Latin-American
+    JACFEE  & 8  &  8 & 1 & Japanese \& European \\
+    KDEF    & 70 &  8 & 5 & European             \\
+    MSFDE   & 4  &  6 & 1 & French Canadian, Chinese sub-Saharan African \\
+    RaFD    & 49 &  8 & 5 & European \& Moroccan \\
+    NimStim & 43 &  9 & 1 & African-, Asian- European- \& Latin-American \\
+    GEMEP   & 10 & 18 & 3 & European
   \end{tabularx}
 \end{table}
